[project]
name = "legacy_openedx"
requires-python = ">=3.12,<3.14"
version = "0.1.0"
dependencies = [
    "dagster-components",
    "ol-orchestrate-lib",
]

[project.entry-points]
"dagster.components" = { legacy_openedx = "legacy_openedx.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "legacy_openedx.definitions"
project_name = "legacy_openedx"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "legacy_openedx"

[tool.setuptools.packages.find]
exclude=["legacy_openedx_tests"]

[tool.uv.sources]
ol-orchestrate-lib = { path = "../../../packages/ol-orchestrate-lib", editable = true }
